[package]
name = "doctor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
doctor-common = { path = "../doctor-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
blazesym = "0.2.0-rc.0"
thiserror = "1.0.63"
procfs = "0.16.0"
clap = "4.5.9"
goblin = {version = "0.8.2", features = ["elf32","elf32"]}
moka = { version = "0.12.8", features = ["future","sync"] }
sled = { version = "0.34.7", features = ["io_uring", "zstd"] }
gimli = "0.31.0"
memmap2 = "0.9.4"


[[bin]]
name = "doctor"
path = "src/main.rs"
